--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     background-color: black;
     border-radius: 55px;
     color: #fff;
-    height: 700px;
+    height: 850px;
     width: 550px;
     padding: 20px;
     
@@ -28,20 +28,25 @@ body{
     align-items: center;
     justify-content: center;
 }
-
+header{
+    /* border: 2px solid red; */
+    height: 290px;
+    width:480px;
+}
 header .screen{
-    height: 270px;
-    width: 480px;
+    /* height: 20px;
+    width: 48px;
+    border: 1px solid red;
     font-size: 70px;
     padding: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
 }
 
-header div.previous{
-    opacity: 0.7;
-    overflow: hidden;
+header.previous{
+    /* opacity: 0.7; */
+    /* overflow: hidden; */
 }
 main{
     display: grid;
